chore: set initial project configuration